style: modify the style of webpages and favicon

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reshawn Lofters</title>
+    <link rel="icon" type="x-icon" href="images/favicon.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -53,8 +54,8 @@
                 <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
                 <h2 class="role-heading">I am a Software <br><span class="multi-text">Developer</span></h2>
                 <p>
-                    I have a passion for using technology to propel innovation
-                    and solve complex problems that can benefit others.
+                    I have a passion for using technology to drive innovation
+                    and solve complex business problems that can benefit others.
                 </p>
                 <div>
                     <a href="#contact">
@@ -76,7 +77,8 @@
             <div>
                 <h1 class="section-title">About Me</h1><hr/>
                 <p>
-                    I am a second-year computer science student at Ontario Tech University.
+                    I am a second-year computer science student at Ontario Tech University, specializing in software engineering.
+                    Growing up, I became fascinated by computers and inspired by the capabilities of technology.<br><br>
                     I am eager to explore new opportunities in software development to apply my skills and knowledge to challenging projects,
                     collaborate in dynamic team environments, and grow alongside other like-minded professionals.
                 </p>
@@ -129,8 +131,8 @@
                 <div class="project-descr-container">
                     <h3 class="project-title">Bug Tracker</h3>
                     <p>
-                        Developed a bug tracker that allows you to create and assign
-                        project related tickets to multuple users within an organization. 
+                        Developed to allow users to track, manage, and resolve issues in software development projects.
+                        
                     </p><hr/>
                     <div class="project-tech-container">
                         <i class="devicon-html5-plain colored"></i>
@@ -138,9 +140,11 @@
                         <i class="devicon-css3-plain colored"></i>
                         <i class="bi bi-dot"></i>
                         <i class="devicon-javascript-plain colored"></i>
+                        <i class="bi bi-dot"></i>       
+                        <i class="devicon-mysql-plain colored"></i>
                     </div>
                     <div>
-                        <button class="view-live-btn">VIEW LIVE</button>
+                        <button class="live-demo-btn">LIVE DEMO</button>
                         <button class="code-btn"> CODE <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                     </div>
                 </div>
@@ -151,8 +155,7 @@
                 <div class="project-descr-container">
                     <h3 class="project-title">Personal Website</h3>
                     <p>
-                        Developed a personal portfolio website to display personal
-                        projects and illustrate personal attributes.
+                        Developed to showcase my story, skills, experiences, projects, and passion for technology.
                     </p><hr/>
                     <div class="project-tech-container">
                         <i class="devicon-html5-plain colored"></i>
@@ -227,7 +230,7 @@
                 </h2>
             </div>
             <p class="copyright-notice">
-                Copyright &copy; <span id="currentYear"></span> Reshawn Lofters. All rights reserved.
+                &copy; Reshawn Lofters <span id="currentYear"></span>. All rights reserved.
             </p>
         </div>
     </section>
