style: modify the style of home and about page

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                 <h2 class="role-heading">I am a Software <br><span class="multi-text">Developer</span></h2>
                 <p>
                     I have a passion for using technology to drive innovation
-                    and solve complex business problems that can benefit others.
+                    and solve complex problems that can benefit others.
                 </p>
                 <div>
                     <a href="#contact">
@@ -66,14 +66,14 @@
                     </a>
                 </div>
             </div>
-            <img src="images/astronaut-riding-on-rocket.png" alt="astronaut-riding-on-rocket">
+            <img src="images/astronaut-flying-with-balloon.png" alt="astronaut-riding-on-rocket">
         </div>
     </section>
 
     <!-- About -->
     <section class="about" id="about">
         <div class="section-container">
-            <img src="images/astronaut-riding-on-rocket.png" alt="astronaut-riding-on-rocket">
+            <img src="images/astronaut-flying-with-balloon.webp" alt="astronaut-riding-on-rocket">
             <div>
                 <h1 class="section-title">About Me</h1><hr/>
                 <p>
@@ -132,7 +132,6 @@
                     <h3 class="project-title">Bug Tracker</h3>
                     <p>
                         Developed to allow users to track, manage, and resolve issues in software development projects.
-                        
                     </p><hr/>
                     <div class="project-tech-container">
                         <i class="devicon-html5-plain colored"></i>
@@ -140,12 +139,14 @@
                         <i class="devicon-css3-plain colored"></i>
                         <i class="bi bi-dot"></i>
                         <i class="devicon-javascript-plain colored"></i>
-                        <i class="bi bi-dot"></i>       
+                        <i class="bi bi-dot"></i>
                         <i class="devicon-mysql-plain colored"></i>
                     </div>
                     <div>
-                        <button class="live-demo-btn">LIVE DEMO</button>
-                        <button class="code-btn"> CODE <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                        <button class="live-demo-btn">DEMO SOON</button>
+                        <a href="https://github.com/reshawnlofters/bug-tracker" target="_blank">
+                            <button class="code-btn">CODE <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
+                        </a>
                     </div>
                 </div>
             </div>
