chore: modify the layout of code

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <!-- Header -->
     <header class="header" id="header">
         <nav>
-            <a href="#home" class="nav-logo">
+            <a href="home" class="nav-logo">
                 Reshawn<span>&#46;</span>
             </a>
             <div class="nav-menu" id="navMenu">
@@ -42,7 +42,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <i class="fa-sharp fa-solid fa-bars" id="open-menu-icon" onclick="openMenu()"></i>
+            <i class="fa-sharp fa-solid fa-bars" id="show-menu-icon" onclick="showMenu()"></i>
         </nav>
     </header>
 
@@ -54,8 +54,8 @@
                 <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
                 <h2 class="role-heading">I am a Software <br><span class="multi-text">Developer</span></h2>
                 <p>
-                    I have a passion for using technology to drive innovation
-                    and solve complex problems that can benefit others.
+                    I have a passion for innovation and using technology
+                    to solve complex problems that can benefit others.
                 </p>
                 <div>
                     <a href="#contact">
