--- a/index.html
+++ b/index.html
@@ -5,16 +5,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reshawn Lofters</title>
-    <link rel="icon" type="x-icon" href="images/favicon.webp">
+    <link rel="icon" type="image/x-icon" href="images/favicon.webp">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <script src="https://kit.fontawesome.com/9af645afab.js" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
-    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script src="script.js" defer></script>
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/header.css">
     <link rel="stylesheet" href="styles/home.css">
@@ -24,6 +20,11 @@
     <link rel="stylesheet" href="styles/contact.css">
     <link rel="stylesheet" href="styles/footer.css">
     <link rel="stylesheet" href="styles/query.css">
+    <script src="https://kit.fontawesome.com/9af645afab.js" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
+    <script src="global.js" defer></script>
+    <script src="contact.js" defer></script>
 </head>
 </body>
     <!-- Header -->
@@ -33,7 +34,7 @@
                 Reshawn<span>&#46;</span>
             </a>
             <div class="nav-menu" id="navMenu">
-                <i class="fa-sharp fa-solid fa-xmark" id="close-menu-icon" onclick="closeMenu()"></i>
+                <i class="fa-sharp fa-solid fa-xmark" id="close-menu-icon" onclick="closeNavMenu()"></i>
                 <ul>
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -42,7 +43,7 @@
                     <li><a href="#contact">Contact</a></li>
                 </ul>
             </div>
-            <i class="fa-sharp fa-solid fa-bars" id="show-menu-icon" onclick="showMenu()"></i>
+            <i class="fa-sharp fa-solid fa-bars" id="display-menu-icon" onclick="openNavMenu()"></i>
         </nav>
     </header>
 
@@ -54,7 +55,7 @@
                 <h2 class="name-heading">Hi&#44; I&#39;m <span>Reshawn</span></h2>
                 <h2 class="role-heading">I am a Software <br><span class="multi-text">Developer</span></h2>
                 <p>
-                    I have a passion for innovation and using technology
+                    I have a passion for software engineering and using technology
                     to solve complex problems that can benefit others.
                 </p>
                 <div>
@@ -185,30 +186,31 @@
             <div class="contact-grid">
                 <span class="contact-info-container"></span>
                 <div class="contact-form-container">
-                    <form action="" class="contact-form" id="contactForm" onsubmit="resetCharacterCounter()">
+                    <form action="" class="contact-form" id="contactForm" onsubmit="resetMessageCharacterCount()" novalidate>
                         <div class="name-email-row">
-                            <div class="input-group">
-                                <input type="text" name="name-feild" id="nameFeild" required>
-                                <label for="name-feild">Name</label>
+                            <div class="form-field">
+                                <label for="name-field">Name:</label>
+                                <input type="text" name="name-field" id="nameField">
+                                <small></small>
                             </div>
-                            <div class="input-group">
-                                <input type="email" name="email-feild" id="emailFeild" spellcheck="false" onkeyup="validateEmail()" required>
-                                <label for="email-feild">Email</label>
-                                <span id="emailErrorMessage"></span>
+                            <div class="form-field">
+                                <label for="email-field">Email:</label>
+                                <input type="email" name="email-field" id="emailField">
+                                <small></small>
                             </div>
                         </div>
-                        <div class="input-group">
-                            <input type="text" name="subject-feild" id="subjectFeild" required>
-                            <label for="subject-feild">Subject</label>
+                        <div class="form-field">
+                            <label for="subject-field">Subject:</label>
+                            <input type="text" name="subject-field" id="subjectField">
+                            <small></small>
                         </div>
-                        <div class="input-group">
-                            <div class="form-textarea-container">
-                                <textarea name="message-feild" id="messageFeild" rows="7" required></textarea>
-                                <label for="message-feild">Message</label>
-                                <div class="char-counter">
-                                    <span class="current-number">0</span>
-                                    <span class="limit-number">/1000</span>
-                                </div>
+                        <div class="form-field">
+                            <label for="message-field">Message:</label>
+                            <textarea name="message-field" id="messageField" rows="7"></textarea>
+                            <small class="message-field-error-message"></small>
+                            <div class="message-field-char-counter">
+                                <span class="current-number">0</span>
+                                <span class="limit-number">/1000</span>
                             </div>
                         </div>
                         <p class="form-submit-message" id="formSubmitMessage"></p>
