style: improve contact form responsiveness
Adjusted media queries to enhance the responsiveness of the contact form on various devices and screen sizes. The form now adapts smoothly to different viewports, making it more user-friendly and accessible on mobile, tablet, and desktop devices.

Also, fixed minor alignment issues and ensured proper input field sizing for optimal usability.

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
                             <div class="form-field">
                                 <label for="name-field">Name:</label>
                                 <input type="text" name="name-field" id="nameField">
-                                <small></small>
+                                <small class="name-field-error-message"></small>
                             </div>
                             <div class="form-field">
                                 <label for="email-field">Email:</label>
@@ -202,7 +202,7 @@
                         <div class="form-field">
                             <label for="subject-field">Subject:</label>
                             <input type="text" name="subject-field" id="subjectField">
-                            <small></small>
+                            <small class="subject-field-error-message"></small>
                         </div>
                         <div class="form-field">
                             <label for="message-field">Message:</label>
