feat(about): update content in "about me" section
Revised the text content within the "About Me" section.

--- a/index.html
+++ b/index.html
@@ -78,10 +78,11 @@
             <div>
                 <h1 class="section-title">About Me</h1><hr/>
                 <p>
-                    I am a second-year computer science student at Ontario Tech University, specializing in software engineering.
-                    Growing up, I became fascinated by computers and inspired by the capabilities of technology.<br><br>
-                    I am eager to explore new opportunities in software development to apply my skills and knowledge to challenging projects,
-                    collaborate in dynamic team environments, and grow alongside other like-minded professionals.
+                    I am a second-year computer science student at Ontario Tech University,
+                    specializing in software engineering.<br><br>
+                    I am eager to explore innovative software development opportunities
+                    to apply my skills and insights to challenging projects, collaborate in team environments,
+                    and grow as a developer alongside like-minded professionals.
                 </p>
                 <a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
                     <button class="linkedin-btn">LINKEDIN <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
