fix: update link path to github repository

--- a/index.html
+++ b/index.html
@@ -155,7 +155,7 @@
             <div class="project-container">
                 <img src="images/Project 2.jpg" alt="project-2-image">
                 <div class="project-descr-container">
-                    <h3 class="project-title">Personal Website</h3>
+                    <h3 class="project-title">Portfolio Website</h3>
                     <p>
                         Developed to showcase my skills, experiences, projects, and passion for technology.
                     </p><hr/>
@@ -170,7 +170,7 @@
                         <a href="index.html">
                             <button class="home-btn">HOME</button>
                         </a>
-                        <a href="https://github.com/reshawnlofters/personal-website" target="_blank">
+                        <a href="https://github.com/reshawnlofters/portfolio-website" target="_blank">
                             <button class="code-btn">CODE <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                         </a>
                     </div>
