style(website): enhance code clarity and structure
- Enhance variable names and comments in global.js.
- Reorganize project structure by moving JavaScript files to a folder.
- Refactor CSS files for consistent curly bracket formatting.

--- a/index.html
+++ b/index.html
@@ -23,14 +23,14 @@
     <script src="https://kit.fontawesome.com/9af645afab.js" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
-    <script src="global.js" defer></script>
-    <script src="contact.js" defer></script>
+    <script src="scripts/global.js" defer></script>
+    <script src="scripts/contact.js" defer></script>
 </head>
 </body>
     <!-- Header -->
     <header class="header" id="header">
         <nav>
-            <a href="home" class="nav-logo">
+            <a href="#home" class="nav-logo">
                 Reshawn<span>&#46;</span>
             </a>
             <div class="nav-menu" id="navMenu">
