style(website): enhance about me, update project
- Enhance the about me section with more details.
- Update a project showcased in the projects section.
- Improve class names in HTML for better readability.

--- a/index.html
+++ b/index.html
@@ -79,10 +79,15 @@
                 <h1 class="section-title">About Me</h1><hr/>
                 <p>
                     I am a second-year computer science student at Ontario Tech University,
-                    specializing in software engineering.<br><br>
-                    I am eager to explore innovative software development opportunities
-                    to apply my skills and insights to challenging projects, collaborate in team environments,
-                    and grow as a developer alongside like-minded professionals.
+                    specializing in software engineering.
+                    My passion for programming drives me, and I find exploring the capabilities 
+                    of technology to be motivating.<br><br>
+                    Currently, I am a Data Analyst at Telus International, where I evaluate 
+                    machine learning model outputs for mapping applications. 
+                    In this role, I have honed my analytical skills and attention to detail, 
+                    which I am eager to apply to future software development positions.<br><br>
+                    I am enthusiastic about exploring software development opportunities to collaborate 
+                    with diverse teams, contribute to impactful projects, and promote innovation.
                 </p>
                 <a href="https://www.linkedin.com/in/reshawnlofters/" target="_blank">
                     <button class="linkedin-btn">LINKEDIN <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
@@ -130,12 +135,13 @@
             <h1 class="section-title">Projects</h1><hr/>
             <div class="project-container">
                 <img src="images/Project 1.jpg" alt="project-1-image">
-                <div class="project-descr-container">
-                    <h3 class="project-title">Bug Tracker</h3>
+                <div class="project-info-container">
+                    <h3 class="project-title">E-commerce Website</h3>
                     <p>
-                        Developed to allow users to track, manage, and resolve issues in software development projects.
+                        Designed to enable users to explore, select, and purchase 
+                        premium computer hardware components for building their workstations.
                     </p><hr/>
-                    <div class="project-tech-container">
+                    <div class="project-tools-container">
                         <i class="devicon-html5-plain colored"></i>
                         <i class="bi bi-dot"></i>
                         <i class="devicon-css3-plain colored"></i>
@@ -146,7 +152,7 @@
                     </div>
                     <div>
                         <button class="live-demo-btn">DEMO SOON</button>
-                        <a href="https://github.com/reshawnlofters/bug-tracker" target="_blank">
+                        <a href="https://github.com/reshawnlofters/e-commerce-website" target="_blank">
                             <button class="code-btn">CODE <i class="fa-sharp fa-solid fa-arrow-right"></i></button>
                         </a>
                     </div>
@@ -154,12 +160,12 @@
             </div>
             <div class="project-container">
                 <img src="images/Project 2.jpg" alt="project-2-image">
-                <div class="project-descr-container">
+                <div class="project-info-container">
                     <h3 class="project-title">Portfolio Website</h3>
                     <p>
-                        Developed to showcase my skills, experiences, projects, and passion for technology.
+                        Designed to showcase my skills, experiences, and projects in software development.
                     </p><hr/>
-                    <div class="project-tech-container">
+                    <div class="project-tools-container">
                         <i class="devicon-html5-plain colored"></i>
                         <i class="bi bi-dot"></i>
                         <i class="devicon-css3-plain colored"></i>
